@@ -69,6 +69,15 @@
         <item>Máy chủ X</item>
     </string-array>
     
+    <!-- CentOS -->
+    
+    <string-array name="centos_components_entries">
+        <item>Pracovné prostredie</item>
+        <item>Server SSH</item>
+        <item>Server VNC</item>
+        <item>X server</item>
+    </string-array>
+    
     <!-- Arch Linux -->
 
     <string-array name="archlinux_components_entries">
