@@ -3,6 +3,7 @@ Changelog (English)
 
 1.5.5
 Open a shell from Android Terminal Emulator
+Added support CentOS
 
 1.5.4
 Fixed a problem with user password that contains uppercase letters
@@ -323,6 +324,7 @@ Updated list packages of base system installation
 
 1.5.5
 Открытие командной оболочки в Android Terminal Emulator
+Добавлена поддержка CentOS
 
 1.5.4
 Исправлена проблема с установкой пароля, содержащего заглавные буквы
